<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quiz It</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign Up</string>

    <string name="login_button_text">Log in</string>
    <string name="signup_button_text">Sign up</string>
    <string name="action_logout">Log Out</string>


    <string name="error_generic_title">Oops!</string>
    <string name="error_generic_message">There was an error, please try again.</string>
    <string name="error_getting_friends">There was an error retrieving the Friends list.</string>
    <string name="error_network_unavailable">The Network is currently not available.</string>
    <string name="error_no_friends_added">Please first add a Friend before sending Pictures.</string>
    <string name="error_invalid_input_title">Check your Inputs</string>
    <string name="error_invalid_input_password">Please enter a longer Password.</string>
    <string name="error_invalid_input_username">Please enter a longer Username.</string>
    <string name="error_invalid_input_email">Please enter a longer Email Address.</string>
    <string name="error_creating_user">There was an error signing up.</string>
    <string name="error_logging_in">There was an error logging in.</string>


    <string name="toast_login_successful">Login successful</string>
    <string name="toast_signup_successful">Signup successful</string>
    <string name="toast_message_sent">Message sent!</string>
    <string name="username_field_hint">Username</string>
    <string name="password_field_hint">Password</string>
    <string name="email_field_hint">Email Address</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_post_question">Submit Question</string>
    <string name="title_activity_game">Quiz It!</string>
    <string name="error_invalid_input_generic">There are too short or empty fields.</string>


</resources>
