<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pw.moter8.burn.SignupActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:hint="@string/username_field_hint"
        android:inputType="textPersonName"
        app:floatingLabel="normal"
        app:maxCharacters="20"/>

    <com.rengwuxian.materialedittext.MaterialEditText
    android:id="@+id/passwordField"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/usernameField"
    android:layout_alignStart="@+id/usernameField"
    android:layout_below="@+id/usernameField"
    android:layout_marginTop="28dp"
    android:ems="10"
    android:hint="@string/password_field_hint"
    android:inputType="textPassword"
    app:floatingLabel="highlight"
    app:minCharacters="6"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/email_field_hint"
        android:inputType="textEmailAddress"
        app:floatingLabel="highlight"/>


    <Button
        android:id="@+id/signupButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_button_text"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/emailField"
        android:layout_marginTop="16dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:indeterminate="false"
        android:layout_below="@+id/signupButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="invisible"/>

</RelativeLayout>
