<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pw.moter8.burn.LoginActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:hint="@string/username_field_hint"
        android:inputType="textPersonName"
        app:floatingLabel="normal"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_alignStart="@+id/usernameField"
        android:layout_below="@+id/usernameField"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/password_field_hint"
        android:inputType="textPassword"
        app:floatingLabel="highlight"
        app:minCharacters="6"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:baselineAligned="false"
        android:clickable="false"
        android:gravity="center_horizontal"
        android:showDividers="none">

        <Button
            android:id="@+id/loginButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/login_button_text"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/signupButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/signup_button_text"
            android:textAllCaps="true"/>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:indeterminate="false"
        android:visibility="invisible"/>

</RelativeLayout>
